--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NotesMVI</string>
     <string name="add_note">Add note</string>
+    <string name="save_note">Save note</string>
 </resources>
